[gd_scene load_steps=8 format=3 uid="uid://dwo4oju5ql5ju"]

[ext_resource type="Script" path="res://Scenes/projectiles/bulletBomb.gd" id="1_q7a44"]
[ext_resource type="Texture2D" uid="uid://cy1xnogwyjoer" path="res://Assets/vfx/dynamite-pack.png" id="2_ldh4b"]
[ext_resource type="Texture2D" uid="uid://c3r8upfrvgwf3" path="res://Assets/vfx/explosion 4.png" id="3_58jrh"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5y0xa"]

[sub_resource type="Animation" id="Animation_8vhb7"]
resource_name = "explode"
step = 0.015873
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../explosion:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.015873, 0.031746, 0.0476191, 0.0634921, 0.0793651, 0.0952381, 0.111111, 0.126984, 0.142857, 0.15873, 0.174603, 0.190476, 0.206349, 0.222222, 0.238095, 0.253968, 0.269841, 0.285714, 0.301587, 0.31746, 0.333333, 0.349206, 0.365079, 0.380952, 0.396825, 0.412698, 0.428571, 0.444444, 0.460317, 0.476191, 0.492064, 0.507937, 0.52381, 0.539683, 0.555556, 0.571429, 0.587302, 0.603175, 0.619048, 0.634921, 0.650794, 0.666667, 0.68254, 0.698413, 0.714286, 0.730159, 0.746032, 0.761905, 0.777778, 0.793651, 0.809524, 0.825397, 0.84127, 0.857143, 0.873016, 0.888889, 0.904762, 0.920635, 0.936508, 0.952381, 0.968254, 0.984127),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Area2D/hitBox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0634921, 0.714286),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_hgcb6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../explosion:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Area2D/hitBox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pa3h4"]
_data = {
"RESET": SubResource("Animation_hgcb6"),
"explode": SubResource("Animation_8vhb7")
}

[node name="BulletBomb" type="Node2D"]
scale = Vector2(2, 2)
script = ExtResource("1_q7a44")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="hitBox" type="CollisionShape2D" parent="Area2D"]
rotation = 1.5708
scale = Vector2(7, 7)
shape = SubResource("CircleShape2D_5y0xa")

[node name="DisappearTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="bombBody" type="Sprite2D" parent="."]
texture = ExtResource("2_ldh4b")
hframes = 3
vframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../bombBody")
libraries = {
"": SubResource("AnimationLibrary_pa3h4")
}

[node name="explosion" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_58jrh")
hframes = 8
vframes = 8

[node name="FuseTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="TravelTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
autostart = true

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="DisappearTimer" to="." method="_on_disappear_timer_timeout"]
[connection signal="timeout" from="FuseTimer" to="." method="_on_fuse_timer_timeout"]
[connection signal="timeout" from="TravelTimer" to="." method="_on_travel_timer_timeout"]
